🐞 fix(logo): alignement
header logo in now centered in index

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -902,8 +902,9 @@ footer {
     .ltitle {
         display: flex;
     }
-
-
+    .logo-title :first-child {
+        margin-left: 25px;
+    }
     .form_container1 {
         width: 50%;
     }
